modified Notifier so that it can be passed from Activity to Activity started modify add notifier view to also be an edit notifier view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="label_dayofweek_thursday">Thursday</string>
     <string name="label_dayofweek_friday">Friday</string>
     <string name="label_dayofweek_saturday">Saturday</string>
+    <string name="label_enabled">Enabled</string>
 
 </resources>
