--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="label_dayofweek_friday">Friday</string>
     <string name="label_dayofweek_saturday">Saturday</string>
     <string name="label_enabled">Enabled</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_save">Save</string>
 
 </resources>
