--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">JAWN</string>
+    <string name="label_hourlyforecast">Hourly Forecast</string>
     <string name="button_add_notification">Add Notification</string>
     <string name="activity_add_notification">Add Notification</string>
     <string name="pick_time">Pick Time</string>
@@ -17,5 +18,6 @@
     <string name="label_enabled">Enabled</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_save">Save</string>
+    <string name="title_activity_view_hourly_forecast">ViewHourlyForecastActivity</string>
 
 </resources>
