moved creation of alarm and notification to Utils file each notification gets its own unique notification id still trying to figure out why alarms after the first are not working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="button_cancel">Cancel</string>
     <string name="button_save">Save</string>
     <string name="title_activity_view_hourly_forecast">ViewHourlyForecastActivity</string>
+    <string name="preference_lastnotificationid">LastNotificationId</string>
+    <string name="preference_jawnnotifier">JAWNNotifier</string>
 
 </resources>
