--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="preference_tokenid">JAWNTokenId</string>
 
     <string name="desc_google_icon">Google Logo</string>
-    <string name="google_signin">Google Sign-In\nQuickstart</string>
+    <string name="google_signin">Google Sign-In\nJAWN</string>
     <string name="signed_out">Signed out</string>
     <string name="sign_out">Sign Out</string>
     <string name="disconnect">Disconnect</string>
